<resources>
    <string name="app_name">Foodie</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Log out</string>
    <string name="Title_App">Foodie</string>
    <string name="Login">Login</string>
    <string name="Password_TextView">Password</string>
    <string name="LoginButton">Login</string>
    <string name="RegisterButton">Register</string>
    <string name="LoginEditText">Login</string>
    <string name="PasswordEditText">Password</string>
    <string name="title_activity_create_account">Register</string>
    <string name="FirstNameEditText">First Name</string>
    <string name="FirstNameTextView">First Name</string>
    <string name="LastNameTextView">Last Name</string>
    <string name="LastNameEditText">Last Name</string>
    <string name="EmailTextView">Email</string>
    <string name="EmailEditText">Email</string>
    <string name="UsernameTextView">Username</string>
    <string name="UsernameEditText">Username</string>
    <string name="PasswordTextView">Password</string>
    <string name="PasswordEditTextRegister">Password</string>
    <string name="RetypePasswordTextView">Password</string>
    <string name="RetypePasswordEditText">Password</string>
    <string name="RegisterButtonConfirmation">Register</string>
    <string name="title_activity_main_page">Foodie</string>

    <string name="Title_DiscoverView">Discover</string>

    <string name="title_section1">Home</string>
    <string name="title_section2">Reservation</string>
    <string name="title_section3">Discover</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="CityTextView">City</string>
    <string name="CityEditText">City</string>
    <string name="DateTextView">Birthday</string>
    <string name="DateEditText">Birthday</string>
    <string name="SexTextView">Gender</string>

    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string name="title_activity_home">Home</string>
    <string name="ExempleHomeTextView">HOME</string>
    <string name="ExempleReservationTextView">Reservation</string>
    <string name="ExempleDiscoverTextView">Discover</string>
    <string name="ReservationTextView">Reservation : </string>
    <string name="RestaurantListPresentationTextView">Please Choose a Restaurant</string>
    <string name="title_activity_restaurant_description">Restaurant Description</string>
    <string name="RestaurantTitleTextView">Restaurant</string>
    <string name="AddressTextView">Address :</string>
    <string name="ZipCodeTextView">Zip Code :</string>
    <string name="CityDescriptionTextView">City :</string>
    <string name="CountryTextView">Country :</string>
    <string name="NumberPhoneTextView">Phone :</string>
    <string name="EmailDescriptionTextView">Email :</string>
    <string name="ReservationButton">Reservation</string>
    <string name="LoggoutButton">Log out</string>
    <string name="title_activity_reservation">Reservation</string>
    <string name="ReservationPageTextView">Reservation</string>
    <string name="ChooseADateTextView">Please choose a date :</string>
    <string name="NextButton">Next</string>
    <string name="title_activity_choose_hour">Choose your hour</string>
    <string name="ConfirmationRerservationButton">Confirmation</string>
</resources>
