<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="nourriture.teambjtu.com.foodie.CreateAccountActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/UserNameEditText"
        android:textColor="#ff808080"
        android:layout_below="@+id/textView6"
        android:layout_alignLeft="@+id/textView6"
        android:layout_alignStart="@+id/textView6"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textStyle="italic"
        android:hint="@string/UsernameEditText"
        android:focusable="false" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/PasswordEditText"
        android:textColor="#ff808080"
        android:layout_below="@+id/PasswordTextViewRegister"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/UserNameEditText"
        android:layout_alignEnd="@+id/UserNameEditText"
        android:hint="@string/PasswordEditTextRegister"
        android:textStyle="italic" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RegisterButtonConfirmation"
        android:id="@+id/RegisterButton"
        android:layout_alignParentBottom="true"
        android:textSize="25dp"
        android:layout_alignLeft="@+id/PasswordEditText"
        android:layout_alignStart="@+id/PasswordEditText"
        android:layout_alignRight="@+id/PasswordEditText"
        android:layout_alignEnd="@+id/PasswordEditText"
        android:onClick="Register" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/PasswordTextView"
        android:id="@+id/PasswordTextViewRegister"
        android:textColor="#ff000000"
        android:layout_below="@+id/UserNameEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/UsernameTextView"
        android:id="@+id/textView6"
        android:textColor="#ff000000"
        android:singleLine="false"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/EmailTextView"
        android:id="@+id/EmailTextView"
        android:layout_below="@+id/PasswordEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#ff000000"
        android:textStyle="bold" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/EmailEditText"
        android:layout_below="@+id/EmailTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/PasswordEditText"
        android:layout_alignEnd="@+id/PasswordEditText"
        android:textColor="#ff808080"
        android:textStyle="italic"
        android:hint="@string/EmailEditText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/CityTextView"
        android:id="@+id/CitytTextView"
        android:layout_below="@+id/EmailEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold"
        android:textColor="#ff000000" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/CityEditText"
        android:textStyle="italic"
        android:textColor="#ff808080"
        android:layout_below="@+id/CitytTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/EmailEditText"
        android:layout_alignEnd="@+id/EmailEditText"
        android:hint="@string/CityEditText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/DateTextView"
        android:id="@+id/DateTextView"
        android:layout_below="@+id/CityEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold"
        android:textColor="#ff000000" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/DateEditText"
        android:layout_below="@+id/DateTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/CityEditText"
        android:layout_alignEnd="@+id/CityEditText"
        android:textStyle="italic"
        android:textColor="#ff808080"
        android:hint="@string/DateEditText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/SexTextView"
        android:id="@+id/GenderTextView"
        android:layout_below="@+id/DateEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold"
        android:textColor="#ff000000" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/GenderChoiceSpinner"
        android:layout_below="@+id/GenderTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:spinnerMode="dialog" />

</RelativeLayout>
