<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/Foodie">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Title_App"
        android:id="@+id/Title_textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:textSize="72dp"
        android:textIsSelectable="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Login"
        android:id="@+id/LoginTextView"
        android:layout_below="@+id/Title_textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textColor="#ff000000" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/LoginEditText"
        android:ems="10"
        android:id="@+id/LoginEditText"
        android:layout_below="@+id/LoginTextView"
        android:layout_alignLeft="@+id/Title_textView"
        android:layout_alignStart="@+id/Title_textView"
        android:layout_alignRight="@+id/Title_textView"
        android:layout_alignEnd="@+id/Title_textView"
        android:textColor="#ff808080" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Password_TextView"
        android:id="@+id/PasswordTextViewRegister"
        android:layout_below="@+id/LoginEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:textColor="#ff000000" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/PasswordEditText"
        android:layout_below="@+id/PasswordTextViewRegister"
        android:text="@string/PasswordEditText"
        android:layout_alignLeft="@+id/LoginEditText"
        android:layout_alignStart="@+id/LoginEditText"
        android:layout_alignRight="@+id/LoginEditText"
        android:layout_alignEnd="@+id/LoginEditText"
        android:textColor="#ff808080" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LoginButton"
        android:id="@+id/LoginButton"
        android:layout_below="@+id/PasswordEditText"
        android:layout_marginTop="28dp"
        android:layout_alignRight="@+id/RegisterButton"
        android:layout_alignEnd="@+id/RegisterButton"
        android:layout_alignLeft="@+id/RegisterButton"
        android:layout_alignStart="@+id/RegisterButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RegisterButton"
        android:id="@+id/RegisterButton"
        android:layout_below="@+id/LoginButton"
        android:layout_alignLeft="@+id/PasswordEditText"
        android:layout_alignStart="@+id/PasswordEditText"
        android:layout_alignRight="@+id/PasswordEditText"
        android:layout_alignEnd="@+id/PasswordEditText"
        android:onClick="CreateAnAccount" />
</RelativeLayout>
